# nixos

./: .gitignore  README.md  configuration.nix  disko.nix  flake.nix  gen_config.sh  hardware-configuration.nix  home-rebuild.sh  install_disko.sh  rebuild.sh
base/: bootEFI.nix  custom-jetbrains.nix  default.nix  jetbra.nix  packages.nix  settings.nix  syncthing.nix  users.nix  work.nix
base/ideas/: webstorm.vmoptions
custom-programs/taffybar/: .gitignore  flake.nix  my-taffybar.cabal  stack.yaml  taffybar.hs
etc/nixos/: hardware-configuration.nix
modules/: cli.nix  desktop-environment.nix  fonts.nix  programming.nix  variables.nix
modules/alacritty/: default.nix
modules/betterlockscreen/: default.nix
modules/blender/: default.nix
modules/chromium/: default.nix
modules/docker/: default.nix
modules/eww/: default.nix
modules/flameshot/: default.nix  flameshot-gui-d.sh  flameshot-gui.sh
modules/ideas/: default.nix  remove_license.sh  webstorm.vmoptions
modules/libreoffice/: default.nix
modules/lutris/: default.nix
modules/neovim/: default.nix  dependency.nix  extraPlugins.nix  nixvim.nix
modules/neovim/config/: init.vim
modules/neovim/config/UltiSnips/: all.snippets
modules/obs/: default.nix
modules/picom/: default.nix
modules/plasma-browser-integration/: default.nix
modules/posy-cursor/: default.nix
modules/taffybar/: default.nix
modules/vscode/: default.nix  settings.json
modules/xidlehook/: default.nix
modules/xmonad/: .gitignore  config.hs  default.nix  flake.nix  my-xmonad.cabal
modules/zsh/: aliases.nix  default.nix
