name:                my-xmonad
version:             0.1.0.0
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  hs-source-dirs:      .
  main-is:             config.hs
  -- -- other-modules lists custom modules in my .xmonad/lib/ directory
  -- other-modules:       Custom.Colors
  --                    , Custom.Prompt.FuzzyWindow
  --                    , XMonad.Layout.Flip
  build-depends:       base
                     , containers
                     , data-default
                     , fuzzy
                     , monoid-subclasses
                     , mtl
                     , process
                     , unix
                     , utf8-string
                     , X11
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , taffybar
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -threaded